force-app/main/default/objects/Customer_Event__c/Customer_Event__c.object-meta.xml
<CustomObject>
    <description>Junction object for M:M relationship b/t episodic events and customer accounts</description>
    <label>Customer Event</label>
    <nameField>
        <displayFormat>EET-CA-{0000000}</displayFormat>
        <label>Customer Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>