force-app/main/default/objects/Customer_Event__c/fields/Current_Year_YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_YTD_Revenue__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.NA_CY_YTD_TOTAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year YTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>