force-app/main/default/objects/Customer_Event__c/fields/Episodic_Event__c.field-meta.xml
<CustomField>
    <fullName>Episodic_Event__c</fullName>
    <label>Episodic Event</label>
    <referenceTo>Episodic_Event__c</referenceTo>
    <relationshipLabel>Customer Events</relationshipLabel>
    <relationshipName>Customer_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>