force-app/main/default/objects/Customer_Event__c/fields/Open_Opportunity_Revenue_WF__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Revenue_WF__c</fullName>
    <label>Open Opportunity Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>