force-app/main/default/objects/Customer_Event__c/fields/Sub_segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_segment__c</fullName>
    <formula>Customer_Account__r.IM_Account__r.Account_Sub_Segment_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-segment</label>
    <type>Text</type>
</CustomField>