force-app/main/default/objects/Customer_Event__c/recordTypes/IMGA_Event.recordType-meta.xml
<RecordType>
    <fullName>IMGA_Event</fullName>
    <active>true</active>
    <label>IMGA Event</label>
</RecordType>